[gd_scene load_steps=36 format=3 uid="uid://bwfe8ag1fq2ay"]

[ext_resource type="Script" uid="uid://cje5f8n6lqhkh" path="res://tests/animation_tree_test/test_iron_chest/iron_chest_at.gd" id="2_8t0c6"]
[ext_resource type="Texture2D" uid="uid://cto61eke7joyb" path="res://game_characters_scenes/shared_assets/circle_shadow.png" id="3_fvb32"]
[ext_resource type="SpriteFrames" uid="uid://c7vvj1caoxoy5" path="res://game_characters_scenes/allies/resource_provider/iron_chest/assets/iron_chest_sprite_frames_base.tres" id="4_uhxxt"]
[ext_resource type="Script" uid="uid://qclj8gae0u4y" path="res://game_characters_scenes/allies/models/ally_scene/ally_level_dependants_nodes/ally_level_dependent_animatedsprite2D.gd" id="5_gsreo"]
[ext_resource type="SpriteFrames" uid="uid://h1vou3feoeuh" path="res://game_characters_scenes/allies/resource_provider/iron_chest/assets/iron_chest_sprite_frames_fast_2.tres" id="6_quud0"]
[ext_resource type="Texture2D" uid="uid://jio37lntveew" path="res://game_characters_scenes/allies/resource_provider/iron_chest/assets/top_light.png" id="7_l4el1"]
[ext_resource type="Texture2D" uid="uid://dupy7tutwy7ke" path="res://game_characters_scenes/allies/resource_provider/iron_chest/assets/top.png" id="8_01y3t"]
[ext_resource type="Texture2D" uid="uid://b3b25otlmw0a0" path="res://game_characters_scenes/allies/resource_provider/iron_chest/assets/top_open.png" id="9_ec4fl"]
[ext_resource type="Texture2D" uid="uid://5xg73u1xoy12" path="res://game_characters_scenes/shared_assets/circle_particle.png" id="10_8p2kq"]
[ext_resource type="Texture2D" uid="uid://jdulueb7gowt" path="res://game_characters_scenes/shared_assets/dust_particle.png" id="11_htkvu"]
[ext_resource type="Texture2D" uid="uid://q5ifosgjvma5" path="res://game_characters_scenes/shared_assets/gun_light.png" id="12_2dq4a"]
[ext_resource type="AnimationLibrary" uid="uid://bg88eo8y8056t" path="res://tests/animation_tree_test/test_iron_chest/animations/library.res" id="12_12g3n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gg43k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_l4el1")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_01y3t")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ec4fl")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_q5asp"]
_limits = [0.0, 0.3, 0.0, 1.0]
_data = [Vector2(0, 0.0406288), 0.0, 0.0, 0, 0, Vector2(0.48318, 0.3), 0.0, 0.0, 0, 0, Vector2(0.993884, 0.0901451), -0.636947, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_j7xbj"]
offsets = PackedFloat32Array(0, 0.204013, 0.712375, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 0.94902, 0.980392, 0.87451, 1, 0.853713, 0.289824, 3.17663e-05, 0)

[sub_resource type="Curve" id="Curve_rvmm0"]
_data = [Vector2(0, 0.147368), 0.0, 0.0, 0, 0, Vector2(0.368132, 0.694737), 0.0, 0.0, 0, 0, Vector2(0.983517, 0.115789), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_6ir51"]
offsets = PackedFloat32Array(0, 0.245033, 1)
colors = PackedColorArray(0.351563, 0.351563, 0.351563, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_msemh"]
_limits = [0.0, 0.1, 0.0, 1.0]
_data = [Vector2(0, 0.0175824), 0.0, 0.0, 0, 0, Vector2(0.505155, 0.1), 0.0163989, 0.0163989, 0, 0, Vector2(1, 0.00549448), -0.368232, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_2ssfk"]
offsets = PackedFloat32Array(0, 0.0783133, 0.379518, 0.572289, 0.76506, 1)
colors = PackedColorArray(0.874968, 0.604514, 0.563407, 0, 1, 1, 1, 1, 0.851918, 0.618979, 0.924945, 1, 0.954472, 0.794962, 0.466424, 1, 0.73367, 0.921388, 0.913637, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtsvu"]
size = Vector2(47, 213)

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_12g3n"]
mix_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_12g3n"]
animation = &"recibe_damage"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gsreo"]
animation = &"_death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8t0c6"]
animation = &"_giving_coin"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fvb32"]
animation = &"_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uhxxt"]
animation = &"spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gsreo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_quud0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l4el1"]
switch_mode = 2
advance_mode = 2
advance_expression = "dying == false"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_01y3t"]
switch_mode = 2
advance_mode = 2
advance_expression = "dying == false"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ec4fl"]
advance_mode = 2
advance_expression = "dying == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8p2kq"]
advance_mode = 2
advance_expression = "dying == true"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_htkvu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ec4fl"]
states/End/position = Vector2(822, 119)
states/Start/position = Vector2(141, 119)
states/_death/node = SubResource("AnimationNodeAnimation_gsreo")
states/_death/position = Vector2(511, 211)
states/_giving_coin/node = SubResource("AnimationNodeAnimation_8t0c6")
states/_giving_coin/position = Vector2(620, 119)
states/_idle/node = SubResource("AnimationNodeAnimation_fvb32")
states/_idle/position = Vector2(364, 119)
states/spawn/node = SubResource("AnimationNodeAnimation_uhxxt")
states/spawn/position = Vector2(262, 119)
transitions = ["Start", "spawn", SubResource("AnimationNodeStateMachineTransition_gsreo"), "spawn", "_idle", SubResource("AnimationNodeStateMachineTransition_quud0"), "_idle", "_giving_coin", SubResource("AnimationNodeStateMachineTransition_l4el1"), "_giving_coin", "_idle", SubResource("AnimationNodeStateMachineTransition_01y3t"), "_idle", "_death", SubResource("AnimationNodeStateMachineTransition_ec4fl"), "_giving_coin", "_death", SubResource("AnimationNodeStateMachineTransition_8p2kq"), "_death", "End", SubResource("AnimationNodeStateMachineTransition_htkvu")]
graph_offset = Vector2(33, -14)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_8t0c6"]
graph_offset = Vector2(-391.725, -85.5416)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_12g3n")
nodes/OneShot/position = Vector2(20, 60)
nodes/ReciebeDamageAnimation/node = SubResource("AnimationNodeAnimation_12g3n")
nodes/ReciebeDamageAnimation/position = Vector2(-420, 180)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_ec4fl")
nodes/StateMachine/position = Vector2(-500, -20)
nodes/output/position = Vector2(200, 60)
node_connections = [&"OneShot", 0, &"StateMachine", &"OneShot", 1, &"ReciebeDamageAnimation", &"output", 0, &"OneShot"]

[node name="IronChest" type="CharacterBody2D"]
position = Vector2(96, 115)
script = ExtResource("2_8t0c6")
metadata/_custom_type_script = "uid://dbcsemdveveol"

[node name="SelectAllyBtn" type="TextureButton" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.211765)
offset_left = -82.0
offset_top = -114.0
offset_right = 82.0
offset_bottom = 54.0

[node name="CoinDropTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-2, 22)
scale = Vector2(1.23684, 1)
texture = ExtResource("3_fvb32")

[node name="Textures" type="Node2D" parent="."]
position = Vector2(0, 39)

[node name="Down" type="AnimatedSprite2D" parent="Textures"]
position = Vector2(-1, -28)
sprite_frames = ExtResource("4_uhxxt")
offset = Vector2(-1, -23)
script = ExtResource("5_gsreo")
levels_modifiers_textures = Dictionary[String, SpriteFrames]({
"fast 2": ExtResource("6_quud0")
})
metadata/_custom_type_script = "uid://qclj8gae0u4y"

[node name="Top" type="AnimatedSprite2D" parent="Textures/Down"]
position = Vector2(-84, -72)
sprite_frames = SubResource("SpriteFrames_gg43k")
autoplay = "default"
offset = Vector2(83, 4)

[node name="CPUParticles2D" type="CPUParticles2D" parent="Textures/Down"]
visible = false
position = Vector2(4, -41)
amount = 40
texture = ExtResource("10_8p2kq")
emission_shape = 3
emission_rect_extents = Vector2(40, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 10)
initial_velocity_min = 115.6
initial_velocity_max = 115.6
linear_accel_min = -80.52
linear_accel_max = -80.52
scale_amount_curve = SubResource("Curve_q5asp")
color_ramp = SubResource("Gradient_j7xbj")

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2(-194, 63)
emitting = false
amount = 20
texture = ExtResource("11_htkvu")
lifetime = 0.8
one_shot = true
speed_scale = 1.2
explosiveness = 0.7
emission_shape = 3
emission_rect_extents = Vector2(60, 1)
direction = Vector2(0, -1)
spread = 15.0
gravity = Vector2(0, -60)
initial_velocity_min = 433.73
initial_velocity_max = 433.73
angular_velocity_min = 277.59
angular_velocity_max = 277.59
scale_amount_curve = SubResource("Curve_rvmm0")
color_ramp = SubResource("Gradient_6ir51")

[node name="SpawnParticles" type="CPUParticles2D" parent="."]
position = Vector2(4, 44.25)
emitting = false
amount = 20
lifetime = 0.8
one_shot = true
explosiveness = 0.9
emission_shape = 3
emission_rect_extents = Vector2(70, 1)
direction = Vector2(0, -1)
spread = 75.99
gravity = Vector2(0, -100)
initial_velocity_min = 357.2
initial_velocity_max = 357.2
angular_velocity_min = 269.16
angular_velocity_max = 269.16
linear_accel_min = 31.78
linear_accel_max = 31.78
scale_amount_curve = SubResource("Curve_msemh")
color_ramp = SubResource("Gradient_2ssfk")

[node name="SpawnLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, 27.25)
color = Color(0.392157, 0.627451, 0.4, 1)
energy = 0.0
texture = ExtResource("12_2dq4a")
texture_scale = 1e-05

[node name="BodyCollShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-34, -71.5)
shape = SubResource("RectangleShape2D_wtsvu")

[node name="StateAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": ExtResource("12_12g3n")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
callback_mode_discrete = 0
tree_root = SubResource("AnimationNodeBlendTree_8t0c6")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../StateAnimationPlayer")
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0

[node name="RecieveDamageBtn" type="Button" parent="."]
offset_left = 529.0
offset_top = 142.0
offset_right = 728.0
offset_bottom = 265.0
text = "damage"

[node name="DieBtn" type="Button" parent="."]
offset_left = 539.0
offset_top = -12.0
offset_right = 691.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 50
text = "die"

[connection signal="pressed" from="RecieveDamageBtn" to="." method="_on_recieve_damage_btn_pressed"]
[connection signal="pressed" from="DieBtn" to="." method="_on_die_btn_pressed"]
